[metadata]
name = aioredis-watchdog
version = file: VERSION
description = python asyncio Redis watchdog for key changes
;long_description = file: README.rst, TODO.rst
keywords = redis, monitor, watchdog
license = License :: OSI Approved :: BSD License
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation :: PyPy
authors = Daniel Garcia (cr0hn)
authors_email = cr0hn@cr0hn.com
url = https://github.com/cr0hn/aioredis-watchdog

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    redis-watchdog = aioredis_watchdog.__main__:main